[gd_scene load_steps=16 format=3 uid="uid://bikjvriqhb0qh"]

[ext_resource type="FontFile" uid="uid://cbw141v74acd0" path="res://Gilroy-Light.otf" id="1_7voi4"]
[ext_resource type="Script" path="res://networking.gd" id="1_74n06"]
[ext_resource type="Texture2D" uid="uid://b1khjxly5sfnl" path="res://pictures/icons8-return-100.png" id="3_kfngd"]
[ext_resource type="Texture2D" uid="uid://bbx6kuw45qhp0" path="res://pictures/icons8-start-30.png" id="4_7eddb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qkgrx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nohdn"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.988235, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 5.0
expand_margin_top = 3.0
expand_margin_right = 15.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_24mwd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8l6n4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ypn7e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1p5rj"]
bg_color = Color(0.505882, 0.494118, 0.603922, 0.243137)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 5
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3sbr7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dkryh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.988235, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 5.0
expand_margin_top = 3.0
expand_margin_right = 15.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t720m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_agqjk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xlhv5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_74n06")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.101961, 0.14902, 1)

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 49.0
offset_top = 233.0
offset_right = 332.0
offset_bottom = 333.0
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_7voi4")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_qkgrx")
theme_override_styles/hover = SubResource("StyleBoxFlat_nohdn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_24mwd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8l6n4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ypn7e")
text = "Back
"
icon = ExtResource("3_kfngd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Muti" type="Node" parent="."]

[node name="Panel" type="Panel" parent="Muti"]
offset_left = 434.0
offset_top = 76.0
offset_right = 1109.0
offset_bottom = 496.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1p5rj")

[node name="t3" type="RichTextLabel" parent="Muti"]
offset_left = 511.0
offset_top = 144.0
offset_right = 645.0
offset_bottom = 227.0
theme_override_font_sizes/normal_font_size = 11
text = "nslookup a website"

[node name="t4" type="RichTextLabel" parent="Muti"]
offset_left = 709.0
offset_top = 128.0
offset_right = 843.0
offset_bottom = 211.0
theme_override_font_sizes/normal_font_size = 10
text = "Check the status of a website with extra network Related Statistics"

[node name="t5" type="RichTextLabel" parent="Muti"]
offset_left = 922.0
offset_top = 130.0
offset_right = 1056.0
offset_bottom = 213.0
theme_override_font_sizes/normal_font_size = 11
text = "Release And Renew your IP Address
"

[node name="t6" type="RichTextLabel" parent="Muti"]
offset_left = 500.0
offset_top = 295.0
offset_right = 634.0
offset_bottom = 378.0
theme_override_font_sizes/normal_font_size = 11
text = "Display and Flush your DNS Cache 

"

[node name="t8" type="RichTextLabel" parent="Muti"]
offset_left = 698.0
offset_top = 295.0
offset_right = 832.0
offset_bottom = 378.0
theme_override_font_sizes/normal_font_size = 11
text = "Generates Qr Code for given link "

[node name="t9" type="RichTextLabel" parent="Muti"]
offset_left = 898.0
offset_top = 295.0
offset_right = 1032.0
offset_bottom = 378.0
theme_override_font_sizes/normal_font_size = 11
text = "Shows you previously connected to wifi's and thier passwordsd

"

[node name="Launch_nslook" type="Button" parent="Muti"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -129.0
offset_right = 104.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_7voi4")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sbr7")
theme_override_styles/hover = SubResource("StyleBoxFlat_dkryh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t720m")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_agqjk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xlhv5")
text = "Launch
"
icon = ExtResource("4_7eddb")
icon_alignment = 2

[node name="Launch_web_stat" type="Button" parent="Muti"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 141.0
offset_top = -129.0
offset_right = 308.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_7voi4")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sbr7")
theme_override_styles/hover = SubResource("StyleBoxFlat_dkryh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t720m")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_agqjk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xlhv5")
text = "Launch
"
icon = ExtResource("4_7eddb")
icon_alignment = 2

[node name="Launch_renew" type="Button" parent="Muti"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 361.0
offset_top = -129.0
offset_right = 528.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_7voi4")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sbr7")
theme_override_styles/hover = SubResource("StyleBoxFlat_dkryh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t720m")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_agqjk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xlhv5")
text = "Launch
"
icon = ExtResource("4_7eddb")
icon_alignment = 2

[node name="Launch_dns" type="Button" parent="Muti"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = 61.0
offset_right = 104.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_7voi4")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sbr7")
theme_override_styles/hover = SubResource("StyleBoxFlat_dkryh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t720m")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_agqjk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xlhv5")
text = "Launch
"
icon = ExtResource("4_7eddb")
icon_alignment = 2

[node name="Launch_Qr" type="Button" parent="Muti"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 141.0
offset_top = 61.0
offset_right = 308.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_7voi4")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sbr7")
theme_override_styles/hover = SubResource("StyleBoxFlat_dkryh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t720m")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_agqjk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xlhv5")
text = "Launch
"
icon = ExtResource("4_7eddb")
icon_alignment = 2

[node name="Launch_pass" type="Button" parent="Muti"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 337.0
offset_top = 61.0
offset_right = 504.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_7voi4")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sbr7")
theme_override_styles/hover = SubResource("StyleBoxFlat_dkryh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t720m")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_agqjk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xlhv5")
text = "Launch
"
icon = ExtResource("4_7eddb")
icon_alignment = 2

[node name="Lanscan" type="Node" parent="."]

[node name="Panel" type="Panel" parent="Lanscan"]
offset_left = 37.0
offset_top = 316.0
offset_right = 356.0
offset_bottom = 496.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1p5rj")

[node name="t" type="RichTextLabel" parent="Lanscan"]
offset_left = 47.0
offset_top = 325.0
offset_right = 332.0
offset_bottom = 458.0
theme_override_font_sizes/normal_font_size = 14
text = "Uses the scapy library to scan the lan for all the connected devices while listing their IP Addresses and extra details"

[node name="r" type="RichTextLabel" parent="Lanscan"]
offset_left = 46.0
offset_top = 292.0
offset_right = 225.0
offset_bottom = 320.0
text = "Lanscanner"

[node name="Launch_Lanscan" type="Button" parent="Lanscan"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -435.0
offset_top = 136.0
offset_right = -268.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_7voi4")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sbr7")
theme_override_styles/hover = SubResource("StyleBoxFlat_dkryh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t720m")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_agqjk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xlhv5")
text = "Launch
"
icon = ExtResource("4_7eddb")
icon_alignment = 2

[node name="Nmap" type="Node" parent="."]

[node name="Panel" type="Panel" parent="Nmap"]
offset_left = 37.0
offset_top = 73.0
offset_right = 356.0
offset_bottom = 253.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1p5rj")

[node name="Nmap_description" type="RichTextLabel" parent="Nmap"]
offset_left = 47.0
offset_top = 76.0
offset_right = 332.0
offset_bottom = 215.0
theme_override_font_sizes/normal_font_size = 14
text = "This script captures and analyzes network traffic using Nmap's packet sniffing capabilities. It intercepts packets, gathers information like IP addresses and protocols, and aids in vulnerability assessment and network troubleshooting."

[node name="Nmap_title" type="RichTextLabel" parent="Nmap"]
offset_left = 46.0
offset_top = 49.0
offset_right = 225.0
offset_bottom = 77.0
text = "Nmap Sniffer
"

[node name="Launch_Nmap" type="Button" parent="Nmap"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -435.0
offset_top = -107.0
offset_right = -268.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0.988235, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_7voi4")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_3sbr7")
theme_override_styles/hover = SubResource("StyleBoxFlat_dkryh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t720m")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_agqjk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xlhv5")
text = "Launch
"
icon = ExtResource("4_7eddb")
icon_alignment = 2

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Muti/Launch_nslook" to="." method="_on_launch_nslook_pressed"]
[connection signal="pressed" from="Muti/Launch_web_stat" to="." method="_on_launch_web_stat_pressed"]
[connection signal="pressed" from="Muti/Launch_renew" to="." method="_on_launch_renew_pressed"]
[connection signal="pressed" from="Muti/Launch_dns" to="." method="_on_launch_dns_pressed"]
[connection signal="pressed" from="Muti/Launch_Qr" to="." method="_on_launch_qr_pressed"]
[connection signal="pressed" from="Muti/Launch_pass" to="." method="_on_launch_pass_pressed"]
[connection signal="pressed" from="Lanscan/Launch_Lanscan" to="." method="_on_launch_lanscan_pressed"]
[connection signal="pressed" from="Nmap/Launch_Nmap" to="." method="_on_launch_nmap_pressed"]
